Updated styling with default options and to avoid blurring the channel icons on the homepage.

--- a/public/injections/css/hideThumbnails.css
+++ b/public/injections/css/hideThumbnails.css
@@ -5,6 +5,6 @@ article.erc-episode-card div.h-thumbnail {
 
 /* Actual thumbnail, and only episode thumbnails */
 /* Avoids movie and "whole season" thumbnails that typically do not contain spoilers. */
-article.erc-episode-card div.h-thumbnail img {
+article.erc-episode-card div.h-thumbnail img.c-content-image.image {
     filter: blur(1em) !important;
 }
